# polarsmith

./: .coverage  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: RESULTS.md  bench_forge.py
src/polarsmith/: __init__.py  _binning.py  _config.py  _cyclical.py  _detector.py  _encoding.py  _forge.py  _interactions.py
tests/: __init__.py  conftest.py  test_binning.py  test_config.py  test_cyclical.py  test_detector.py  test_encoding.py  test_forge.py  test_interactions.py
